[package]
name = "audio_player"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
publish = false

[package.metadata.bundle]
name = "File Explorer"
identifier = "com.example.fileexplorer"
icon = ["./data/icon.png"]
targets = ["x86_64-apple-darwin"]

[lints]
workspace = true


[dependencies]
eframe = { workspace = true, features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }

# For image support:
egui_extras = { workspace = true, features = ["default", "image"] }
egui = { workspace = true }

env_logger = { version = "0.11.5", default-features = false, features = [
    "auto-color",
    "humantime",
] }

mp4ameta = "0.11.0"
hound = "3.4"
id3 = "1.14.0"
csv = "1.1"
rayon = "1.5"
rodio = "0.19.0"
dirs = "5.0.1"
