[package]
name = "wifi"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
publish = false

[lints]
workspace = true


[dependencies]
eframe = { workspace = true, features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }

# For image support:
egui_extras = { workspace = true, features = ["default", "image"] }

env_logger = { version = "0.11.5", default-features = false, features = [
    "auto-color",
    "humantime",
] }
tokio = { version = "1", features = ["full"] }
regex = "1.10.6"
pnet = "0.35.0"
