[package]
name = "Calc"
version = "3.0.0"
edition = "2018"
description = "A fast calculator for solving scientific and algebraic math equations in strings."
readme = "../README.md"

[lib]
path = "src/lib.rs"

[[bin]]
name = "Calc"
path = "src/main.rs"
required-features = ["executable"]

[features]
executable = ["structopt", "colored"]

[dependencies]
peekmore = "1.3.0"
#num = "0.4.0"
# dependencies for the runnable version (feature "executable")
structopt = { version = "0.3", optional = true }
colored = { version = "2.0", optional = true }
