[package]
name = "calculator"
version = "0.1.0"
authors = ["Varphone Wong <varphone@qq.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.76"
publish = false

[lints]
workspace = true

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
eframe = { workspace = true, features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }
fend-core = { path = "../../fend_core" }
eval = "0.4.3"
clipboard = "0.5.0"
winit = "0.30.5"

# For image support:
egui_extras = { workspace = true, features = ["default", "image"] }

env_logger = { version = "0.11.5", default-features = false, features = [
    "auto-color",
    "humantime",
] }
latex2mathml = "0.2.3"
peekmore = "1.3.0"
structopt = "0.3"
colored = "2.0"
meval = "0.2.0"

