[package]
name = "ecolor"
version.workspace = true
authors = [
  "Ali Aghaahmadi",
]
description = "Color structs and color conversion utilities"
edition.workspace = true
rust-version.workspace = true
categories = ["mathematics", "encoding"]
keywords = ["gui", "color", "conversion", "gamedev", "images"]
include = ["**/*.rs", "Cargo.toml"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[lib]


[features]
default = []


[dependencies]
emath.workspace = true

bytemuck = { workspace = true, optional = true, features = ["derive"] }

cint = { version = "0.3.1", optional = true }

color-hex = { version = "0.2.0", optional = true }

document-features = { workspace = true, optional = true }

serde = { workspace = true, optional = true }
