[package]
name = "main_app"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
publish = false

[package.metadata.bundle]
name = "Main App"
identifier = "com.example.fileexplorer"
icon = ["./data/icon.png"]
targets = ["x86_64-apple-darwin"]

[lints]
workspace = true


[dependencies]
eframe = { workspace = true, features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }

# For image support:
egui_extras = { workspace = true, features = ["default", "image"] }
egui = { workspace = true }

env_logger = { version = "0.11.5", default-features = false, features = [
    "auto-color",
    "humantime",
] }
tokio = { version = "1", features = ["full"] }
regex = "1.10.6"